# bibleplan

./: README.md
bibleplan-api/: pyproject.toml  todo.txt
bibleplan-api/bibleplan_api/: genbooks.py
bibleplan-api/sources/: esv_chapters.csv  nrsv_apocrypha_chapters.csv
bibleplan-ui/: package-lock.json  package.json
bibleplan-ui/src/: App.tsx  main.tsx  types.tsx
bibleplan-ui/src/components/: layout.tsx  selectables.tsx
bibleplan-ui/src/data/: defaultPlans.tsx
