[tool.poetry]
name = "bibleplan-api"
version = "0.1.0"
description = ""
authors = ["chalupaul <me@chalupaul.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.10.0"
flake8-bugbear = "^23.9.16"
mypy = "^1.6.1"
isort = "^5.12.0"
taskipy = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
black = "black bibleplan_api tests"
flake = "flake8 bibleplan_api tests"
mypy = "mypy bibleplan_api tests"
test = "task black && task flake && task mypy"